Add exchange money domain

--- a/.env.test
+++ b/.env.test
@@ -23,3 +23,5 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3316/investment_manager
 ###> symfony/swiftmailer-bundle ###
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+CURRENCY_CONVERTER_API_KEY=1fc6722fc3459102ed99
