--- a/.env.dist
+++ b/.env.dist
@@ -49,3 +49,5 @@ MAILER_URL=null://localhost
 ###> symfony/messenger ###
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 ###< symfony/messenger ###
+
+CURRENCY_CONVERTER_API_KEY=api_key
