Add DQL date function
Added DQL date function to be able to use the function DATE() from mysql in dql queries.

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -47,3 +47,7 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Infrastructure/Resources/config/doctrine/domain'
                 prefix: 'App\Domain'
                 alias: Domain
+
+        dql:
+            datetime_functions:
+                date:  App\Infrastructure\Doctrine\DQL\Date
