Add cli command to re calculate the wallet capital.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -147,10 +147,16 @@ services:
         arguments:
             $stockDividendsDecorate: '@App\Application\Market\Decorator\StockDividendsDecorate'
 
+    App\Application\Wallet\Handler\ReCalculateWalletCapitalHandler:
+        class: App\Application\Wallet\Handler\ReCalculateWalletCapitalHandler
+        arguments:
+            $walletPositionDecorate: '@App\Application\Wallet\Decorator\WalletOpenPositionDecorate'
+
     # Decorators
     App\Application\Market\Decorator\StockDividendsDecorate: ~
 
     App\Application\Wallet\Decorator\StockPrevDividendDecorator: ~
+    App\Application\Wallet\Decorator\WalletOpenPositionDecorate: ~
 
     # Subscribers
     App\Application\Market\Subscriber\HouseKeeperSubscriber:
