--- a/config/services.yaml
+++ b/config/services.yaml
@@ -63,15 +63,10 @@ services:
     Goutte\Client: ~
 
     # Interfaces
-    App\Client\DividendsClientInterface: '@dividends.client'
 
     # Client
     Symfony\Contracts\HttpClient\HttpClientInterface:
         factory: ['Symfony\Component\HttpClient\HttpClient', 'create']
-
-    dividends.client:
-        class: App\Client\NasdaqDividendsClient
-
 
     ##### PRESENTATION LAYER START
 
@@ -127,12 +122,7 @@ services:
     App\Application\Market\Repository\StockDividendRepositoryInterface: '@App\Infrastructure\Storage\Market\StockDividendRepository'
 
     # Market\Service
-    App\Application\Market\Service\StockDividendsServiceInterface: '@App\Application\Market\Service\StockDividendsService'
-    App\Application\Market\Service\StockDividendsService: ~
-
-    # Market\Service
-    App\Application\Market\Parser\DividendsParserInterface: '@App\Application\Market\Parser\NasdaqDividendsParser'
-    App\Application\Market\Parser\NasdaqDividendsParser: ~
+    App\Application\Market\Service\StockDividendsServiceInterface: '@App\Application\Market\Service\StockDividendsMediatorService'
 
     # Wallet
     App\Application\Wallet\Repository\ProjectionWalletRepositoryInterface: '@App\Infrastructure\Storage\Wallet\ProjectionWalletRepository'
@@ -181,6 +171,24 @@ services:
         arguments:
             $stockPrevDividendDecorator: '@App\Application\Wallet\Decorator\StockPrevDividendDecorator'
 
+    # Service
+    App\Application\Market\Service\StockDividendsMediatorService:
+        class: App\Application\Market\Service\StockDividendsMediatorService
+        arguments:
+            - '@service.stock.dividends.nasdaq'
+            - '@service.stock.dividends.nasdaq'
+
+    service.stock.dividends.nasdaq:
+        class: App\Application\Market\Service\StockDividendsService
+        arguments:
+            - '@App\Application\Market\Client\NasdaqDividendsClient'
+            - '@App\Application\Market\Parser\NasdaqDividendsParser'
+
+    # Client
+    App\Application\Market\Client\NasdaqDividendsClient: ~
+
+    # Parser
+    App\Application\Market\Parser\NasdaqDividendsParser: ~
 
     # Exchange
     App\Application\ExchangeMoney\Exchange\CurrencyConverter:
