--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,7 +21,7 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php,Infrastructure}'
+        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php,Infrastructure,Domain}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -109,6 +109,12 @@ services:
 
     # Market\Service
     App\Application\Market\Service\StockDividendsServiceInterface: '@App\Application\Market\Service\StockDividendsMediatorService'
+
+    # Market\Scraper
+    App\Application\Market\Scraper\StockScraperInterface: '@App\Application\Market\Scraper\YahooStockScraper'
+    App\Application\Market\Scraper\YahooStockScraper: ~
+    App\Application\Market\Scraper\StockMarketScraperInterface: '@App\Application\Market\Scraper\YahooStockMarketScraper'
+    App\Application\Market\Scraper\YahooStockMarketScraper: ~
 
     # Wallet
     App\Application\Wallet\Repository\ProjectionWalletRepositoryInterface: '@App\Infrastructure\Storage\Wallet\ProjectionWalletRepository'
