--- a/config/services.yaml
+++ b/config/services.yaml
@@ -150,6 +150,11 @@ services:
         arguments:
             $stockPrevDividendDecorator: '@App\Application\Wallet\Decorator\StockPrevDividendDecorator'
 
+    App\Application\Wallet\Subscriber\PositionDividendRetentionUpdatedSubscriber:
+        class: App\Application\Wallet\Subscriber\PositionDividendRetentionUpdatedSubscriber
+        arguments:
+            $positionDecorate: '@App\Application\Wallet\Decorator\WalletOpenPositionDecorate'
+
     # Service
     App\Application\Market\Service\StockDividendsMediatorService:
         class: App\Application\Market\Service\StockDividendsMediatorService
