--- a/config/services.yaml
+++ b/config/services.yaml
@@ -155,6 +155,11 @@ services:
         arguments:
             $positionDecorate: '@App\Application\Wallet\Decorator\WalletOpenPositionDecorate'
 
+    App\Application\Wallet\Subscriber\WalletBuyOperationUpdatedSubscriber:
+        class: App\Application\Wallet\Subscriber\WalletBuyOperationUpdatedSubscriber
+        arguments:
+            $positionDecorate: '@App\Application\Wallet\Decorator\WalletOpenPositionDecorate'
+
     # Service
     App\Application\Market\Service\StockDividendsMediatorService:
         class: App\Application\Market\Service\StockDividendsMediatorService
