[37] Update historical stock price
Refactored price strategy to be able to have historical price data.

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,7 +19,7 @@ doctrine:
 
         types:
             money: App\Infrastructure\Doctrine\DBAL\MoneyType
-            currency: App\DBAL\CurrencyType
+            currency: App\Infrastructure\Doctrine\DBAL\CurrencyType
             wallet_metadata: App\DBAL\WalletMetadataType
             position_metadata: App\DBAL\PositionMetadataType
             datetime: App\Infrastructure\Doctrine\DBAL\UTCDateTimeType
