--- a/config/menu/menu.yaml
+++ b/config/menu/menu.yaml
@@ -19,15 +19,23 @@ menu:
         label: 'Stock Market'
         icon: 'fas fa-industry'
         route: 'stock_market_index'
-      StockMenuItem:
+      MarketStockMenuItem:
         label: 'Stock'
         icon: 'fas fa-money-bill'
         route: 'stock_index'
-      BrokerMenuItem:
+      MarketBrokerMenuItem:
         label: 'Broker'
         icon: 'fas fa-business-time'
         route: 'broker_index'
-      WalletMenuItem:
+      MarketWalletMenuItem:
         label: 'Wallet'
         icon: 'fas fa-wallet'
         route: 'wallet_index'
+  ReportMenuItem:
+    label: 'Report'
+    icon: 'fas fa-file-invoice'
+    items:
+      ReportWeeklyReportMenuItem:
+        label: 'Weekly Report'
+        icon: 'fab fa-buffer'
+        route: 'report_weekly'
