--- a/config/services.yaml
+++ b/config/services.yaml
@@ -87,6 +87,7 @@ services:
     App\Application\Market\Repository\StockMarketRepositoryInterface: '@App\Infrastructure\Storage\Market\StockMarketRepository'
     App\Application\Market\Repository\StockRepositoryInterface: '@App\Infrastructure\Storage\Market\StockRepository'
     App\Application\Market\Repository\StockDividendRepositoryInterface: '@App\Infrastructure\Storage\Market\StockDividendRepository'
+    App\Application\Market\Repository\StockHistoricalPriceRepositoryInterface: '@App\Infrastructure\Storage\Market\StockHistoricalPriceRepository'
 
     # Market\Service
     App\Application\Market\Service\StockDividendsServiceInterface: '@App\Application\Market\Service\StockDividendsMediatorService'
@@ -253,6 +254,7 @@ services:
     App\Infrastructure\Storage\Market\StockMarketRepository: ~
     App\Infrastructure\Storage\Market\StockRepository: ~
     App\Infrastructure\Storage\Market\StockDividendRepository: ~
+    App\Infrastructure\Storage\Market\StockHistoricalPriceRepository: ~
     App\Infrastructure\Storage\Market\HouseKeeperStockDividendRepository: ~
 
     App\Infrastructure\Storage\Wallet\ProjectionWalletRepository: ~
